crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_help_popup_small_terminal.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown       │
│ |                                    │
└──────────────────────────────────────┘
┌Search Jobs───────────────────────────┐
│ No job┌Help──────────────────┐efresh.│
│       │Global Keys:          ↑       │
│       │  ?               Help█       │
│       │  Ctrl+P              ║       │
│       │Command palette       ║       │
│       │  q               Quit║       │
│       │  Ctrl+Q          Quit║       │
│       │(global)              ║       │
│       │  Tab             Next↓       │
│       └──────────────────────┘       │
│                                      │
└──────────────────────────────────────┘
┌──────────────────────────────────────┐
│ Shift+Tab:Prev  | Esc:Close| r:Refres│
└──────────────────────────────────────┘
