crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_index_details_popup_empty.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                                                                    │
│ |                 ┌Index Details─────────────────────────────────────────────────────────────────┐                   │
└───────────────────│                               No index selected                              │───────────────────┘
┌Indexes────────────│                                                                              │───────────────────┐
│                   │                            Press Esc or q to close                           │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
└───────────────────└──────────────────────────────────────────────────────────────────────────────┘───────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Shift+Tab:Prev  | Esc:Close| r:Refresh Enter:Details j/k or Up/Down:Navigate Ctrl+c:Copy| ?:Help | q:Quit            │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
