crates/tui/tests/snapshots/snapshot_popups_tests__snapshot_index_details_popup_narrow.snap
---
source: crates/tui/tests/snapshot_popups_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                            │
│ ┌Index Details─────────────────────────────────────────────────────────────┐ │
└─│Name: test_index                                                          ↑─┘
┌I│                                                                          █─┐
│t│Total Event Count: 1000000                                                █ │
│ │                                                                          █ │
│ │Current DB Size: 50000 MB                                                 █ │
│ │                                                                          █ │
│ │Max Total Data Size: 100000 MB                                            █ │
│ │                                                                          █ │
│ │Max Warm DB Count: 300                                                    ║ │
│ │                                                                          ║ │
│ │Max Hot Buckets: 10                                                       ║ │
│ │                                                                          ║ │
│ │Frozen Time Period: 2592000 seconds (30 days)                             ║ │
│ │                                                                          ║ │
│ │Home Path: /opt/splunk/var/lib/splunk/test_index/db                       ║ │
│ │                                                                          ║ │
│ │Cold DB Path: /opt/splunk/cold                                            ║ │
└─│                                                                          ↓─┘
┌─└──────────────────────────────────────────────────────────────────────────┘─┐
│Esc:Close | r:Refresh Enter:Details j/k or Up/Down:Navigate ...| ?:Help | q:Qu│
└──────────────────────────────────────────────────────────────────────────────┘
